python/testData/inspections/PyUnresolvedReferencesInspection/unresolvedImportedModule.py
import <error descr="No module named deliverance">deliverance</error>.proxycommand
deliverance.proxycommand.main()
